# Back-up

Human_intention/: CMakeLists.txt
Human_intention/src/: KinectDisplay.cpp  KinectDisplay.h  attention_map.cpp  attention_map.hpp  find_objects_aruco.cpp  find_objects_aruco.h  find_objects_base.h  skeleton_tracker.cpp  skeleton_tracker.h  trajectory.h
Human_intention/src/Aruco/: marker.h
Human_intention/src/Human_intention/msg/: _Marker.py  _MarkerArray.py  __init__.py
aruco_marker_tracking/: CMakeLists.txt  CMakeLists.txt~  README.md  manifest.xml~  rosconfig.env  rosconfig.env~
aruco_marker_tracking/launch/: aruco_mapping_filter.launch  aruco_mapping_filter.launch~
aruco_marker_tracking/msg_gen/cpp/include/aruco_mapping_filter/: Marker.h  MarkerArray.h
aruco_marker_tracking/msg_gen/lisp/: Marker.lisp  MarkerArray.lisp  _package.lisp  _package_Marker.lisp  _package_MarkerArray.lisp  aruco_mapping_filter-msg.asd
aruco_marker_tracking/src/: aruco.h~  aruco_marker_detection.cpp  aruco_marker_detection.h  aruco_marker_detection.h~  aruco_selectoptimalmarkers.cpp  aruco_selectoptimalmarkers.cpp~  arucofidmarkers.h~  board.cpp~  board.h~  boarddetector.cpp~  boarddetector.h~  cameraparameters.cpp~  cameraparameters.h~  cvdrawingutils.cpp~  cvdrawingutils.h~  filter.cpp  filter.cpp~  filter.h  filter.h~  main.cpp~  marker.cpp~  marker.h~  markerdetector.cpp~  markerdetector.h~  viewpoint_estimation.cpp~  viewpoint_estimation_lib.cpp~  viewpoint_estimation_lib.h~
aruco_marker_tracking/src/aruco_mapping_filter/msg/: _Marker.py  _MarkerArray.py
